--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,12 @@
 #
 #    pip-compile requirements.in
 #
+aiohappyeyeballs==2.6.1
+    # via aiohttp
+aiohttp==3.12.13
+    # via langchain-community
+aiosignal==1.3.2
+    # via aiohttp
 annotated-types==0.7.0
     # via pydantic
 anthropic==0.55.0
@@ -13,6 +19,8 @@ anyio==4.9.0
     #   anthropic
     #   httpx
     #   openai
+attrs==25.3.0
+    # via aiohttp
 certifi==2025.6.15
     # via
     #   httpcore
@@ -20,10 +28,16 @@ certifi==2025.6.15
     #   requests
 charset-normalizer==3.4.2
     # via requests
+dataclasses-json==0.6.7
+    # via langchain-community
 distro==1.9.0
     # via
     #   anthropic
     #   openai
+frozenlist==1.7.0
+    # via
+    #   aiohttp
+    #   aiosignal
 h11==0.16.0
     # via httpcore
 httpcore==1.0.9
@@ -33,11 +47,14 @@ httpx==0.28.1
     #   anthropic
     #   langsmith
     #   openai
+httpx-sse==0.4.1
+    # via langchain-community
 idna==3.10
     # via
     #   anyio
     #   httpx
     #   requests
+    #   yarl
 jiter==0.10.0
     # via
     #   anthropic
@@ -47,17 +64,33 @@ jsonpatch==1.33
 jsonpointer==3.0.0
     # via jsonpatch
 langchain==0.3.26
+    # via
+    #   -r requirements.in
+    #   langchain-community
+langchain-community==0.3.26
     # via -r requirements.in
 langchain-core==0.3.66
     # via
     #   langchain
+    #   langchain-community
     #   langchain-text-splitters
 langchain-text-splitters==0.3.8
     # via langchain
 langsmith==0.4.2
     # via
     #   langchain
+    #   langchain-community
     #   langchain-core
+marshmallow==3.26.1
+    # via dataclasses-json
+multidict==6.5.1
+    # via
+    #   aiohttp
+    #   yarl
+mypy-extensions==1.1.0
+    # via typing-inspect
+numpy==2.3.1
+    # via langchain-community
 openai==1.91.0
     # via -r requirements.in
 orjson==3.10.18
@@ -66,6 +99,11 @@ packaging==24.2
     # via
     #   langchain-core
     #   langsmith
+    #   marshmallow
+propcache==0.3.2
+    # via
+    #   aiohttp
+    #   yarl
 pydantic==2.11.7
     # via
     #   anthropic
@@ -73,15 +111,22 @@ pydantic==2.11.7
     #   langchain-core
     #   langsmith
     #   openai
+    #   pydantic-settings
 pydantic-core==2.33.2
     # via pydantic
+pydantic-settings==2.10.1
+    # via langchain-community
+python-dotenv==1.1.1
+    # via pydantic-settings
 pyyaml==6.0.2
     # via
     #   langchain
+    #   langchain-community
     #   langchain-core
 requests==2.32.4
     # via
     #   langchain
+    #   langchain-community
     #   langsmith
     #   requests-toolbelt
 requests-toolbelt==1.0.0
@@ -92,9 +137,13 @@ sniffio==1.3.1
     #   anyio
     #   openai
 sqlalchemy==2.0.41
-    # via langchain
+    # via
+    #   langchain
+    #   langchain-community
 tenacity==9.1.2
-    # via langchain-core
+    # via
+    #   langchain-community
+    #   langchain-core
 tqdm==4.67.1
     # via openai
 typing-extensions==4.14.0
@@ -106,10 +155,17 @@ typing-extensions==4.14.0
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
+    #   typing-inspect
     #   typing-inspection
+typing-inspect==0.9.0
+    # via dataclasses-json
 typing-inspection==0.4.1
-    # via pydantic
+    # via
+    #   pydantic
+    #   pydantic-settings
 urllib3==2.5.0
     # via requests
+yarl==1.20.1
+    # via aiohttp
 zstandard==0.23.0
     # via langsmith
