--- a/requirements.txt
+++ b/requirements.txt
@@ -73,7 +73,10 @@ langchain-core==0.3.66
     # via
     #   langchain
     #   langchain-community
+    #   langchain-openai
     #   langchain-text-splitters
+langchain-openai==0.3.25
+    # via -r requirements.in
 langchain-text-splitters==0.3.8
     # via langchain
 langsmith==0.4.2
@@ -92,7 +95,9 @@ mypy-extensions==1.1.0
 numpy==2.3.1
     # via langchain-community
 openai==1.91.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   langchain-openai
 orjson==3.10.18
     # via langsmith
 packaging==24.2
@@ -123,12 +128,15 @@ pyyaml==6.0.2
     #   langchain
     #   langchain-community
     #   langchain-core
+regex==2024.11.6
+    # via tiktoken
 requests==2.32.4
     # via
     #   langchain
     #   langchain-community
     #   langsmith
     #   requests-toolbelt
+    #   tiktoken
 requests-toolbelt==1.0.0
     # via langsmith
 sniffio==1.3.1
@@ -144,6 +152,8 @@ tenacity==9.1.2
     # via
     #   langchain-community
     #   langchain-core
+tiktoken==0.9.0
+    # via langchain-openai
 tqdm==4.67.1
     # via openai
 typing-extensions==4.14.0
